--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title>jSearch</title>
 
     <script src="app/assets/javascripts/bundle.js"></script>
+    <link rel="stylesheet" href="app/assets/stylesheets/reset.css">
+    <link rel="stylesheet" href="app/assets/stylesheets/layout.css">
+    <link rel="stylesheet" href="app/assets/stylesheets/index_styles.css">
   </head>
   <body>
     <div id="root">React not working</div>
