--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <title>jSearch</title>
     <link rel="stylesheet" type="text/css" href="app/assets/stylesheets/splashpage.css">
-    <script src="app/assets/javascripts/bundle.js"></script>
+    <!-- <script src="app/assets/javascripts/bundle.js"></script> -->
+    <script src="bundle.js"></script>
     <link rel="stylesheet" href="app/assets/stylesheets/reset.css">
     <link rel="stylesheet" href="app/assets/stylesheets/layout.css">
     <link rel="stylesheet" href="app/assets/stylesheets/index_styles.css">
