--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="app/assets/stylesheets/splashpage.css">
     <!-- <script src="app/assets/javascripts/bundle.js"></script> -->
     <script src="bundle.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
     <link rel="stylesheet" href="app/assets/stylesheets/reset.css">
     <link rel="stylesheet" href="app/assets/stylesheets/layout.css">
     <link rel="stylesheet" href="app/assets/stylesheets/index_styles.css">
