--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>jSearch</title>
+    <title>Meetarii</title>
     <link rel="stylesheet" type="text/css" href="app/assets/stylesheets/splashpage.css">
     <!-- <script src="app/assets/javascripts/bundle.js"></script> -->
     <script src="bundle.js"></script>
