--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="app/assets/stylesheets/layout.css">
     <link rel="stylesheet" href="app/assets/stylesheets/index_styles.css">
     
-    <script src="app/assets/javascripts/bundle.js"></script>
-    <!-- <script src="bundle.js"></script> -->
+    <!--<script src="./app/assets/javascripts/bundle.js"></script>-->
+     <script src="bundle.js"></script> 
   </head>
   <body>
     <div id="root">React not working</div>
